@@ -1,6 +1,6 @@
 # SCENARIO 1: Moving existing apps to the cloud
 
-* Purpose: 
+* Purpose:
 * Difficulty: `intermediate`
 * Time: `45 minutes`
 
@@ -140,7 +140,7 @@ migration paths include **IBM® WebSphere® Application Server** and **JBoss EAP
 
 **3. View the results**
 
-Next, go to the **project explorer > expand rhamt-report** on the left hand side. Right click on **index.html** and click on **preview** to view the landing page.
+Next, go to the **project explorer**. Expand `rhamt-reports/monolith` on the left-hand side. Right click on `index.html` and click on **preview** to view the landing page.
 
 You should see the landing page for the report:
 
@@ -181,13 +181,6 @@ There are several other sub-pages accessible by the menu near the top. Click on 
 > Some of the above sections may not appear depending on what was detected in the project.
 
 Now that you have the RHAMT report available, let's get to work migrating the app!
-
-## Set Maven environment variables
-
-In order to use Maven we have to set up the following environment variable. Run the below command on the codeready workspace terminal before moving on.
-```
-export MAVEN_OPTS='-Xmx2048m -XX:MaxPermSize=2048m'
-```
 
 ## Migrate Application Startup Code
 
@@ -370,7 +363,7 @@ the supplier of the product needs to be notified.
 Unfortunately this MDB was written a while ago and makes use of weblogic-proprietary interfaces to configure and operate the
 MDB. RHAMT has flagged this and reported it using a number of issues.
 
-JBoss EAP provides and even more efficient and declarative way
+JBoss EAP provides an even more efficient and declarative way
 to configure and manage the lifecycle of MDBs. In this case, we can use annotations to provide the necessary initialization
 and configuration logic and settings. We will use the
 `@MessageDriven` and `@ActivationConfigProperty` annotations, along with the `MessageListener` interfaces to provide the
@@ -525,7 +518,8 @@ plus Red Hat OpenShift bring to the table.
 
 ## Migrate and run the project
 
-Now that we migrated the application you are probably eager to test it. To test it we locally JBoss EAP has been already installed and configured.
+Now that we migrated the application you are probably eager to test it. To test it locally, JBoss EAP 7.2 has already been downloaded. We just need to install it.
+
 Run the following command in the terminal window.
 ~~~
 unzip -d $HOME $HOME/jboss-eap-7.2.0.zip
@@ -574,7 +568,7 @@ EE, since it defaults to use the Java EE Web Profile. This is done by adding a `
 </configuration>
 ~~~
 
-Since our application is using a Database we also configuration that by adding the following at the `<-- TODO: Add Datasource definition here -->` comment
+Since our application is using a Database we also configure that by adding the following at the `<-- TODO: Add Datasource definition here -->` comment
 
 ~~~xml
 <resource>
@@ -592,7 +586,7 @@ Since our application is using a Database we also configuration that by adding t
 </resource>
 ~~~
 
-Since our application is using a JMS Topic we are also need to add the configuration for that by adding the following at the `<-- TODO: Add JMS Topic here -->` comment
+Since our application is using a JMS Topic we also need to add the configuration for that by adding the following at the `<-- TODO: Add JMS Topic here -->` comment
 
 ~~~xml
 <resource>
@@ -603,9 +597,9 @@ Since our application is using a JMS Topic we are also need to add the configura
 </resource>
 ~~~
 
-We are now ready to build and test the project
+We are now ready to build and test the project.
 
-## Configuring the JBoss EAP 
+## Configuring JBoss EAP
 
 Our application is at this stage pretty standards based, but it needs two things. One is the need to add the JMS Topic since our application depends on it. In the CodeReady Workspaces Terminal window, Run the following command
 
@@ -632,7 +626,7 @@ Wait for the server to startup. You should see `Deployed "ROOT.war" (runtime-nam
 Open another CodeReady Workspaces Terminal Window by clicking on the '**+**' sign next to it and selecting **Terminal**. From the new Terminal window, access the application by running the below command:
 
 ```
-curl http://localhost:8080 
+curl http://localhost:8080
 ```
 
 ## Shutdown the application
@@ -647,7 +641,7 @@ We now have a fully migrated application that we tested locally. Let's deploy it
 
 Open the `modernize-apps/monolith/pom.xml` file.
 
-At the `<!-- TODO: Add OpenShift profile here -->` we are going to add a the following configuration to the pom.xml
+At the `<!-- TODO: Add OpenShift profile here -->` we are going to add the following configuration to the pom.xml
 
 ~~~xml
 <profile>
@@ -717,20 +711,16 @@ From the CodeReady Workspaces Terminal window, switch to the dev project you cre
 Run the below commands one by one to import all the required images and the template in to our namespace.
 
 ```
-oc create -n ocpuser0XX-coolstore-dev -f https://raw.githubusercontent.com/openshift/openshift-ansible/release-3.9/roles/openshift_examples/files/examples/v3.9/image-streams/image-streams-rhel7.json
-
-oc create -n ocpuser0XX-coolstore-dev -f https://raw.githubusercontent.com/openshift/openshift-ansible/release-3.9/roles/openshift_examples/files/examples/v3.9/xpaas-streams/eap70-image-stream.json
-
 oc create -n ocpuser0XX-coolstore-dev -f https://raw.githubusercontent.com/fasalzaman/modernize-apps-labs/master/monolith/src/main/openshift/template-binary1.json
 ```
 
 And finally deploy template:
 
-`oc new-app coolstore-monolith-binary-build -p IMAGE_STREAM_NAMESPACE=ocpuser0XX-coolstore-dev`
+`oc new-app coolstore-monolith-binary-build`
 
 This will deploy both a PostgreSQL database and JBoss EAP, but it will not start a build for our application.
 
-Then open up the Monolith Overview page at 
+Then open up the Monolith Overview page at
 
 `https://{{OPENSHIFT_MASTER}}/console/project/ocpuser0XX-coolstore-dev/`
 and verify the monolith template items are created:
@@ -776,7 +766,7 @@ When it's done you should see the application deployed successfully with blue ci
 
 <kbd>![](images/moving-existing-apps/build-done.png)</kbd>
 
-Test the application by clicking on the Route link at 
+Test the application by clicking on the Route link at
 
 `http://www-ocpuser0XX-coolstore-dev.{{ROUTE_SUFFIX}}`,
 which will open the same monolith Coolstore in your browser, this time running on OpenShift:
@@ -793,7 +783,7 @@ In the next step you'll explore more of the developer features of OpenShift in p
 
 ## Summary
 
-Now that you have migrating an existing Java EE app to the cloud 
+Now that you have migrated an existing Java EE app to the cloud
 with JBoss and OpenShift, you are ready to start modernizing the
 application by breaking the monolith into smaller microservices in
 incremental steps, and employing modern techniques to ensure the
